Mise au propre finie Olivier

--- a/API/API.ipynb
+++ b/API/API.ipynb
@@ -40,6 +40,7 @@
     }
    ],
    "source": [
+    "# Première requêt test\n",
     "url = \"https://api.themoviedb.org/3/authentication\"\n",
     "\n",
     "headers = {\n",
@@ -86,7 +87,7 @@
     "    else:\n",
     "        print(f'Error: {response.status_code}, {response.text}')\n",
     "\n",
-    "# On sort le nombre totale de films trouvés pour vérifier que l'opération a fonctionné\n",
+    "# On sort le nombre total de films trouvés pour vérifier que l'opération a fonctionné\n",
     "print(f'Total Movie IDs: {len(all_movie_ids)}')\n",
     "print(all_movie_ids)"
    ]
@@ -1342,16 +1343,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# On convertit cette base en .csv\n",
     "df_final.to_csv('MoviesPopDir.csv', index= False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bc4eaad-41ba-4051-b12d-7c0db929bead",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
