Modelisation presque fonctionnelle !!

--- a/cleaning_data/cleaning_api.ipynb
+++ b/cleaning_data/cleaning_api.ipynb
@@ -62,6 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# On supprime les colonnes inutiles pour notre projet\n",
     "base = base.drop(['Unnamed: 0','backdrop_path','homepage', 'poster_path', 'video', 'status'], axis=1)"
    ]
   },
@@ -539,7 +540,7 @@
     "\n",
     "Nous pouvons remarquer maintenant que certaines variables (belongs_to_collection par exemple) sont formatées de façon un peu complexes : ce sont des chaînes de caractères, ressemblant à des dictionnaires. Pour ces variables, seule une partie de cette chaîne de carcatères nous intéresse, en général ce qui suit le terme 'name'. Pour récupérer seulement cette partie là, la méthode pour laquelle nous avons opté est de passer par les Regular Expressions (le module re), ne pouvant pas utiliser les méthodes associées aux dictionnaires.\n",
     "\n",
-    "Nous avons pris garde pour cahcune des vaariables de traiter le cas où la valeur était NaN, même si la variable 'belongs_to_collection' était la seule à en avoir. "
+    "Nous avons pris garde pour chacune des variables de traiter le cas où la valeur était NaN, même si la variable 'belongs_to_collection' était la seule à en avoir. "
    ]
   },
   {
@@ -570,6 +571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# On définit une fonction qui va pouvoir extraire le nom de la collection directement à partir de la chaîne de caractère en utilisant les expressions régulières\n",
     "def extract_name(x):\n",
     "    if pd.notna(x) and isinstance(x, str):\n",
     "        match = re.search(\"'name':\\s*'([^']+)'\", str(x))\n",
@@ -577,7 +579,7 @@
     "    else:\n",
     "        return None\n",
     "\n",
-    "base['collection_name'] = base['belongs_to_collection'].apply(extract_name)\n"
+    "base['collection_name'] = base['belongs_to_collection'].apply(extract_name)"
    ]
   },
   {
@@ -1040,6 +1042,7 @@
     }
    ],
    "source": [
+    "# Puis on se débarasse de la colonne originale qui ne nous est plus utile\n",
     "base = base.drop(['belongs_to_collection'], axis=1)\n",
     "base"
    ]
@@ -1059,6 +1062,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Nous suivons la même méthode pour les autres variables dans ce cas là\n",
     "def extract_genres(x):\n",
     "    try:\n",
     "        return [re.search(\"'name':\\s*'([^']+)'\", match.group()).group(1) for match in re.finditer(\"{.*?'name':\\s*'([^']+)'\", str(x))]\n",
@@ -2005,6 +2009,7 @@
     }
    ],
    "source": [
+    "# Pour les langues nous modifions un peu la fonction car ce n'est plus 'name' mais 'english-name' qui apparaît\n",
     "def extract_languages(x):\n",
     "    try:\n",
     "        return [re.search(\"'english_name':\\s*'([^']+)'\", match.group()).group(1) for match in re.finditer(\"{.*?'english_name':\\s*'([^']+)'\", str(x))]\n",
@@ -2488,6 +2493,7 @@
     }
    ],
    "source": [
+    "# Pour les compagnies de production nous modifions également pour récupérer leur nom et leur pays d'origine\n",
     "def extract_production_companies(x):\n",
     "    try:\n",
     "        return [(match.group('name'), match.group('origin_country')) for match in re.finditer(r\"'name':\\s*'(?P<name>[^']+).*?'origin_country':\\s*'(?P<origin_country>[^']+)'\", str(x))]\n",
@@ -2971,6 +2977,7 @@
     }
    ],
    "source": [
+    "# On se débarasse des colonnes originales qui ne nous sont plus utiles\n",
     "base = base.drop(['genres', 'production_countries', 'production_companies', 'spoken_languages'], axis = 1)\n",
     "base"
    ]
