commentaires améliorés + textes graphes reduits pour plus de lisibilité

--- a/wiki_scrap/fonction_scrapping.ipynb
+++ b/wiki_scrap/fonction_scrapping.ipynb
@@ -76,7 +76,7 @@
     "    if not os.path.exists(folder_path):\n",
     "        os.makedirs(folder_path)\n",
     "\n",
-    "    # Créez le chemin complet du fichier CSV en combinant le dossier et le nom du fichier\n",
+    "    # Créer le chemin complet du fichier CSV en combinant le dossier et le nom du fichier\n",
     "    file_path = os.path.join(folder_path, output_file)\n",
     "    \n",
     "    \n",
@@ -213,10 +213,10 @@
     "for award_name, award_link in dict_awards.items():\n",
     "    print(f\"Processing {award_name}...\")\n",
     "    \n",
-    "    # Utilisez la fonction scrape_wikipedia_table pour obtenir les tables Wikipedia\n",
+    "    # Utiliser la fonction scrape_wikipedia_table pour obtenir les tables Wikipedia\n",
     "    tables = get_tables_from_wikipedia(award_link)\n",
     "\n",
-    "    # Sauvegardez les tables dans un fichier CSV portant le nom du prix\n",
+    "    # Sauvegarder les tables dans un fichier CSV portant le nom du prix\n",
     "    awd_n = f\"{award_name}.csv\"\n",
     "    save_tables_to_csv(tables, awd_n, folder_path='wiki_scrap')\n",
     "\n",
