--- a/API/API.ipynb
+++ b/API/API.ipynb
@@ -862,11 +862,11 @@
     "    \n",
     "    if response.status_code == 200:\n",
     "        movie_details = response.json()\n",
-    "        # Extract director information from the 'crew' section\n",
+    "        #Extraire le réalisateur dans le crew\n",
     "        credits = movie_details.get('crew', {})\n",
     "        directors = [crew['name'] for crew in credits if crew.get('job') == 'Director']\n",
     "        \n",
-    "        # Add director information to the list\n",
+    "        # ajouter le réalisteur dans la liste\n",
     "        movie_details_list.append({'id': movie_id, 'directors': directors})\n",
     "    else:\n",
     "        print(f'Error: {response.status_code}, {response.text}')\n",
