README updated final!

--- a/modelisation/Model_Olivier_Dasha.ipynb
+++ b/modelisation/Model_Olivier_Dasha.ipynb
@@ -619,6 +619,14 @@
    "source": [
     "# Améliorations de l'algorithme possibles \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82b1a139-aa14-453c-8559-c8ae061c5827",
+   "metadata": {},
+   "source": [
+    "Bien que satisfaisant pour ce que nous souhaitions faire, notre algorithme aurait besoin d'un certain nombre d'améliorations pour être réellement intéressant (hors du contexte d'un projet de programmation). D'un côté, la dimension \"Item-Item\" pourrait être améliorée avec l'ajout de nouvelles informations, comme les acteurs, ou les producteurs par exemple. Aussi, nous aurions pu essayé d'intégrer certaines variables numériques que nous avions récupérer mais que nous n'avons pas pu exploiter (par exemple la note moyenne, mais aussi le budget ou la durée par exemple). D'un autre, nous pourrions essayer une approche plus \"User-User\" en essayant de récolter des informations du côté des utilisateurs. Mais même sans rentrer dans une logique purement \"User-User\", récolter plus de donnée en rapport aux utilisateurs pourrait aider à affiner cet algorithme. Enfin, bien sûr, une des améliorations les plus évidentes serait d'enrichir la base avec de nouveaux films "
+   ]
   }
  ],
  "metadata": {
